3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

plugins/cfpython/cfpython.c: fix invalid options when empty parameter.
Nicolas Weeger 2007-12-26

Add support for user-defined events. Those can be called from the Python plugin.
    server/plugins.c
    plugins/common/include/plugin_common.h
    plugins/common/plugin_common.c
    plugins/cfpython/cfpython_object.c
    plugins/cfpython/include/cfpython_object_private.h
    plugins/cfpython/cfpython.c
    include/sproto.h
    include/plugin.h
Yann Chachkoff (gros) 2007-12-23

Add error information to CrossfireMap.TriggerConnected, make magice_ear scriptable
    server/monster.c
    plugins/cfpython/cfpython_map.c
Tchize 2007-12-22

Change skill animation to use anim_suffix instead of the name.
 server/skill_util.c
Nicolas Weeger 2007-12-21

Fix missing animation first pic. Change animate_object to not alter the state,
but merely ensure the pic is valid. Move state/face changing upstream.
 common/anim.c
 server/player.c server.c time.c
Nicolas Weeger 2007-12-16

More compound animations. Make animations loop instead of resetting all the time.
Fix missing first animation pic in some cases.
 common/anim.c
 server/skill_util.c
Nicolas Weeger 2007-12-16

Add line/row info to cjson module upon error
Tchize 2007-12-18

Added my missing entries to Changelog
Tchize 2007-12-18

Add try_find_animation() for compound animations, LOG() again in find_animation().
 common/anim.c
 include/libproto.h
Nicolas Weeger 2007-12-16

Fix incorrect "setup sound FALSEFALSE" response.
 socket/request.c
Andreas Kirschbaum 2007-12-18

Add Object.NoDamage and Object.RandomMovement to Python Crossfire Object.
 plugins/cfpython/cfpython_object.c